--- a/Jungnami/Jungnami/SJ/Storyboard/Rank.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Rank.storyboard
@@ -10,6 +10,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AppleSDGothicNeo.ttc">
+            <string>AppleSDGothicNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--LoginVC-->
         <scene sceneID="xq2-AR-Ks8">
@@ -79,7 +84,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sMS-8t-J8z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-813.60000000000002" y="2408.5457271364321"/>
+            <point key="canvasLocation" x="-718" y="1602"/>
         </scene>
         <!--Main Page MenuVC-->
         <scene sceneID="ILA-FR-2zd">
@@ -721,6 +726,174 @@
             </objects>
             <point key="canvasLocation" x="905" y="2884"/>
         </scene>
+        <!--InfoVC-->
+        <scene sceneID="jRA-j5-o13">
+            <objects>
+                <viewController storyboardIdentifier="InfoVC" id="BOc-fI-Wwo" customClass="InfoVC" customModule="Jungnami" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HlB-zP-68U">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xtr-vu-kyt">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="cGh-0U-JTD"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="이용 약관" id="PXS-O1-rmt">
+                                        <barButtonItem key="leftBarButtonItem" image="writepage_x" id="Sgo-Gc-xDW">
+                                            <color key="tintColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="dismissAction:" destination="BOc-fI-Wwo" id="kbl-Pl-Z63"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wRF-yC-beF">
+                                <rect key="frame" x="21" y="90" width="333" height="551"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZRJ-AZ-TaJ">
+                                        <rect key="frame" x="5" y="5" width="323" height="541"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <mutableString key="text">정치가 나의 미래다 이용약관
+
+제 1 조 (목적)
+이 약관은 Team정나미(이하 "회사"라고 합니다)가 제공하는 모바일 어플리케이션 정치가 나의 미래다 관련 제반 서비스(이하 서비스)의 이용과 관련하여 회원과 "회사" 간에 필요한 사항을 규정함을 목적으로 합니다.
+제 2 조 (정의)
+이 약관에서 사용하는 용어의 정의는 다음과 같습니다. 
+1."서비스"란 구현되는 단말기(PC, 휴대형단말기 등의 각종 유무선 장치를 포함)와 상관없이 회원이 이용할 수 있는 모바일 어플리케이션 정치가 나의 미래다 서비스 및 이와 관련된 제반 서비스를 의미합니다. 
+2."회원"이라 함은 "서비스"에 접속하여 이 약관에 따라 "회사"와 이용계약을 체결하고, "회사"가 제공하는 "서비스"를 이용하는 고객을 말합니다. 
+3."닉네임"이라 함은 "회원"의 "서비스"이용을 위하여 "회원"이 이용약관 및 개인정보취급방침에 동의한 후 수집한 "회원"의 계정정보에 저장된 "닉네임(이름)"을 말합니다. 
+4. "컨텐츠"라 함은 "서비스"에서 "회원"에게 제공하는 모든 종류의 텍스트, 이미지 결과물을 말합니다.
+제 3 조 (약관의 게시와 개정)
+1."회사"는 이 약관의 내용을 "회원"이 쉽게 알 수 있도록 "서비스" 내 또는 연결화면을 통하여 게시합니다.
+2."회사"는 필요한 경우 관련 법령을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.
+3."회사"가 이 약관을 개정할 경우에는 개정내용과 적용일자를 명시하여 "서비스"에서 적용일자 7일 전부터 적용일자 전일까지 공지합니다. 다만, "회원"에게 불리한 변경의 경우에는 적용일자 30일 전부터 공지합니다.
+4."회사"가 전항에 따라 공지하면서 "회원"에게 적용일자 전일까지 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 공지하였음에도 "회원"이 명시적으로 거부의 의사표시를 하지 아니한 경우 "회원"이 개정약관에 동의한 것으로 봅니다.
+5."회원"은 개정 약관에 동의하지 않는 경우 적용일자 전일까지 "회사"에 거부의사를 표시하고 "서비스" 이용계약을 해지할 수 있습니다.
+제 4 조 (약관의 해석)
+1."회사"는 이 약관 외에 별도의 운영정책을 둘 수 있으며, 해당 내용이 이 약관과 상충할 경우 개별 서비스의 이용약관을 우선하여 적용합니다.
+2.이 약관에서 정하지 아니한 사항이나 해석에 대해서는 운영정책, 이용안내, 관련법령에 따릅니다.
+제 5 조 (이용계약 체결)
+1.이용계약은 "회원"이 되고자 하는 자(이하 "가입신청자"라고 합니다.)가 단말기에 정치가 나의 미래다 모바일 어플리케이션을 설치하고 이 약관의 내용에 대하여 동의를 한 다음 "회사"가 정한 절차에 따라 가입신청을 완료하면, "회사"가 이러한 신청에 대하여 승낙함으로써 체결됩니다.
+2."회사"는 "가입신청자"의 신청에 대하여 아래 각 호에 해당하는 사유가 있는 경우에는 승낙을 하지 않을 수 있으며, 가입 이후에도 아래 각 호의 사유가 확인될 경우에는 승낙을 취소하거나 이용계약을 해지할 수 있습니다. 
+① "가입신청자"가 이 약관에 의하여 이전에 "회원"자격을 상실한 적이 있는 경우.
+② 실명이 아닌 명의 또는 타인의 명의를 이용한 경우
+③ 허위 또는 잘못된 정보를 기재 또는 제공하거나, "회사"가 제시하는 내용을 기재하지 않은 경우
+④ "가입신청자"의 귀책사유로 인하여 승인이 불가능하거나 기타 이 약관에서 규정한 제반 사항을 위반하며 신청하는 경우.
+3.이용계약의 성립 시기는 "회사"가 계정 생성 완료를 신청절차상에서 표시하거나 제16조의 방식에 따른 통지가 "가입신청자"에게 도달한 시점으로 합니다.
+제 6 조 (개인정보의 보호)
+1."회사"는 정보통신망이용촉진및정보보호등에관한법률, 개인정보보호법 등 관련 법령이 정하는 바에 따라 "회원"의 개인정보를 보호하기 위해 노력합니다. 개인정보의 보호 및 이용에 대해서는 관련 법령 및 "회사"의 개인정보취급방침이 적용됩니다. 다만, "회사"가 제작한 화면 이외의 링크된 화면 등에서는 "회사"의 개인정보취급방침이 적용되지 않습니다.
+제 7 조 ("회사"의 의무)
+1."회사"는 관련 법령과 이 약관을 준수하며, 계속적이고 안정적으로 "서비스"를 제공하기 위하여 최선을 다하여 노력합니다.
+2."회사"는 "회원"이 안전하게 "서비스"를 이용할 수 있도록 정보통신망 이용촉진 및 정보보호 등에 관한 법률 등 관계법령에 따라 개인정보 및 서비스 이용 중 생성되는 개인정보를 보호하여야 합니다.
+3. "회사"의 임직원은 서비스 제공과 관련한 "회원"의 개인정보를 회원 외에는 제3자에게 누설 또는 배포해서는 안되며 이를 어길 시 직위해제의 사유가 될 수 있습니다.
+4."회사"는 "서비스" 이용과 관련하여 "회원"으로부터 제기된 의견이나 불만이 정당하다고 인정할 경우에는 이를 처리하여야 하며, "서비스" 내 게시판, 전자우편 등을 통하여 "회원"에게 처리과정 및 결과를 전달할 수 있습니다.
+5. "회사"는 이용계약의 체결, 계약사항의 변경 및 해지 등 "회원"과의 계약관련 절차 및 내용에 있어 편의를 제공하도록 최선을 다합니다.
+제 8 조 ("회원"의 의무)
+1."회원"은 아래의 행위를 하여서는 안 됩니다.
+① "서비스"의 정보를 부정하게 취득하는 행위
+② "서비스"에 대한 해킹 또는 유사 프로그램을 이용하여 정상적인 운영을 어렵게 하는 행위 (예: 해킹 또는 바이러스 유포, 디도스 공격 등)
+③ "서비스"에 대한 허위 사실을 유포하거나 업무방해 행위를 하는 행위
+④ "회사"가 게시한 정보의 변경
+⑤ "회사"와 기타 제3자의 저작권 등 지적재산권에 대한 침해
+⑥ 외설 또는 폭력적인 메시지, 화상, 음성, 기타 공서양속에 반하는 정보를 "서비스"에 공개 또는 게시하는 행위
+⑦ "회사"의 동의 없이 영리를 목적으로 "서비스"를 사용하는 행위
+⑧ "회사"의 사전 승낙 없이 에이전트(Agent), 스크립트(Script), 스파이더(Spider), 스파이웨어(Spyware), 툴바(Toolbar) 등의 자동화된 수단, 기타 부정한 방법을 통하여 "서비스"에 접속하는 행위, 노출횟수 및 클릭횟수를 부정하게 생성하거나 증가시키는 행위, "서비스" 이용 신청을 하는 행위, "회사"의 서버에 부하를 야기하는 행위
+⑨ 기타 현행 법령에 위반되는 불법적인 행위 및 서비스에 추가로 공지되는 사항에 위배되는 행위
+이상 각 호 해당 사항에 명시한 내용을 위반한 회원은 강제 탈퇴 처리 될 수 있으며 민 형사상의 책임을 지게 됩니다.
+2."회원"은 관계 법령, 이 약관, 이용안내 및 "서비스"와 관련하여 "회사"가 공지하거나 통지한 사항 등을 준수하여야 하며, 기타 "회사"의 업무에 방해되는 행위를 하여서는 안 됩니다.
+3. 본 약관을 위반 하거나, 기타 대한민국 관계 법령에 위반하는 행위에 대해서는 경고 없이 회원의 권한이 박탈되며, 이에 대해 회사는 회원에게 어떠한 보상도 하지 않습니다.
+제 9 조 ("서비스"의 제공 등)
+1."회사"는 "서비스"를 일정범위로 분할하여 각 범위 별로 이용가능시간을 별도로 지정할 수 있습니다. 다만 이러한 경우에는 그 내용을 사전에 공지합니다.
+2."서비스"는 연중무휴, 1일 24시간 제공함을 원칙으로 합니다.
+3."회사"는 컴퓨터 등 정보통신설비의 보수점검, 교체 및 고장, 통신두절 또는 운영상 합리적인 이유가 있는 경우 서비스의 제공을 일시적으로 중단할 수 있습니다. 이 경우 "회사"는 제16조에 따른 방법으로 "회원"에게 통지합니다. 다만, "회사"가 사전에 통지할 수 없는 부득이한 사유가 있는 경우 사후에 통지할 수 있습니다.
+4."회사"는 서비스의 제공에 필요한 경우 정기점검을 실시할 수 있으며, 정기점검시간은 서비스제공화면에 공지한 바에 따릅니다.
+제 10 조 ("서비스"의 변경)
+1."회사"는 안정적인 "서비스" 제공을 위하여 "서비스"의 내용, 운영상, 기술상 사항 등을 변경할 수 있습니다.
+2."회사"는 "서비스"를 변경할 경우 변경내용과 적용일자를 명시하여 사전에 공지합니다. 단, "회원"의 권리나 의무 및 "서비스"의 이용과 관련되는 실질적인 사항을 변경할 경우 적용일자 7일 전부터 공지하며, "회원"에게 불리한 변경의 경우 적용일자 30일 전부터 공지합니다.
+3."회원"은 "서비스" 변경에 동의하지 않을 경우 "회사"에 거부의사를 표시하고 이용계약을 해지할 수 있습니다.
+제 11 조 ("컨텐츠"의 제공 및 저작권)
+1."서비스" 내에 게시되는 "컨텐츠"의 저작권은 "회사"에게 귀속됩니다.
+2. "회사"는 "회원"에게 맞는 "컨텐츠"의 제공을 위해 "회원"의 정보를 활용할 수 있습니다.
+3."컨텐츠"을 임의로 무단 사용하여 발생하는 손실이나 기타의 문제는 전적으로 "회원" 개인의 판단에 따른 책임이며, "회사"는 이에 대하여 책임지지 않습니다.
+4. "회원"은 본 서비스에 게시된 "컨텐츠"를 무단으로 상업적이거나 기타 개인적인 이익을 위한 용도로 사용 할 수 없습니다.
+5. "회원"은 본 서비스에 게시된 "컨텐츠"을 무단 도용하여 "회사"에 피해를 입힌 경우, 법적인 절차에 따라 보상해야 합니다.
+제 12 조 (광고의 게제)
+1. "회사"는 "서비스" 운영과 관련하여 "회원"의 정보를 활용하여 광고를 게재할 수 있습니다. "회원"은 "서비스" 이용시 노출 되는 광고 게재에 대해 동의합니다.
+2. "회사"는 "서비스"상에 게재되어 있거나 "서비스"를 통한 광고주의 판촉활동에 "회원"이 참여하거나 교신 또는 거래를 함으로써 발생하는 손실과 손해에 대해 책임을 지지 않습니다.
+제 13 조 (권리의 귀속)
+1."서비스"에 대한 저작권 및 지적재산권은 "회사"에 귀속됩니다.
+2."회사"는 "서비스"와 관련하여 "회원"에게 "회사"가 정한 이용조건에 따라 "서비스" 등을 이용할 수 있는 이용권만을 부여하며, "회원"은 이를 양도, 판매, 담보제공 등의 처분행위를 할 수 없습니다.
+제 14 조 ("회원"에 대한 통지)
+1."회사"가 "회원"에 대하여 통지를 하는 경우 이 약관에 별도의 규정이 없는 한 "회원"이 제공한 전자우편주소 등으로 할 수 있습니다.
+2."회사"는 "회원" 전체에 대하여 통지를 하는 경우 7일 이상 "서비스" 내에 게시함으로써 전항의 통지에 갈음할 수 있습니다.
+제 15 조 (이용제한 등)
+1."회사"는 "회원"이 관련 법령 및 이 약관의 의무를 위반하거나 "서비스"의 정상적인 운영을 방해한 경우, 아래와 같이 경고, 일시정지, 이용계약해지 등으로 "서비스" 이용을 단계적으로 제한할 수 있습니다. 
+
+약관 위반 - 경고 
+경고 3회 누적 - 일시정지 (30일 간 로그인 제한) 
+일시정지 후 재경고 - 이용계약해지 (재가입 제한) 
+
+2."회사"는 전항에도 불구하고, "저작권법" 및 "컴퓨터프로그램보호법"을 위반한 불법프로그램의 제공 및 운영방해, "정보통신망이용촉진및정보보호등에관한법률"을 위반한 불법통신 및 해킹, 악성프로그램의 배포, 접속권한 초과행위 등과 같이 관련 법령을 위반한 경우에는 즉시 이용계약을 해지할 수 있습니다. 본 항에 따른 이용계약 해지 시 "서비스" 이용을 통해 획득한 모든 혜택이 소멸되며, "회사"는 이에 대해 별도로 보상하지 않습니다.
+3."회사"는 본 조의 이용제한 범위 내에서 제한의 조건 및 세부내용은 운영정책, 이용안내 등에서 정하는 바에 의합니다.
+4.본 조에 따라 "서비스" 이용을 제한하거나 이용계약을 해지하는 경우에는 "회사"는 제13조에 따른 방법으로 "회원"에게 통지합니다.
+5."회원"은 본 조에 따른 이용제한 등에 대해 "회사"가 정한 절차에 따라 이의신청을 할 수 있습니다. 이 때 이의가 정당하다고 "회사"가 인정하는 경우 "회사"는 즉시 "서비스"의 이용을 재개합니다.
+제 16 조 (이용계약 해지)
+1."회원"은 언제든지 "서비스" 내 설정 메뉴 또는 고객센터 등을 통하여 이용계약 해지를 신청할 수 있으며, "회사"는 관련 법령이 정하는 바에 따라 이를 즉시 처리하여야 합니다.
+2."회사"는 "회원"이 이 약관을 위반하거나 관계 법령을 위반하는 경우 이용계약을 해지할 수 있습니다.
+3.이용계약 해지가 완료되는 경우 관련 법령 및 개인정보취급방침에 따라 "회사"가 보유하는 정보를 제외한 모든 "회원"의 정보가 삭제됩니다.
+4.전항에도 불구하고 제2항에 따라 "회사"가 이용계약을 해지하는 경우 "회사"는 "회원"의 이의신청 접수 및 처리 등을 위하여 일정 기간 동안 "회원"의 정보를 보관할 수 있으며, 해당 기간이 경과한 후에 "회원"의 정보를 삭제합니다.
+제 17 조 (책임제한)
+1."회사"는 천재지변, 디도스(DDOS)공격, IDC장애, 기간통신사업자의 회선 장애 또는 이에 준하는 불가항력으로 인하여 "서비스"를 제공할 수 없는 경우에는 "서비스" 제공에 관한 책임이 면제됩니다.
+2."회사"는 "회원"의 귀책사유로 인한 "서비스" 이용의 장애에 대하여는 책임을 지지 않습니다.
+3."회사"는 "서비스"에 게제된 "컨텐츠"의 정보, 자료, 사실의 신뢰도, 정확성, 적법성 등에 관하여는 책임을 지지 않습니다.
+4."회사"는 무료로 제공되는 "서비스" 이용과 관련하여 관련 법령에 특별한 규정이 없는 한 책임을 지지 않습니다.
+5."회사"는 "회원"과 제3자 상호간에 서비스를 매개로 하여 거래 등을 한 경우에는 책임이 면제됩니다.
+6."회사"는 "회원"의 모바일 환경이나 "회사"의 관리 범위에 있지 아니한 보안 문제로 인하여 발생하는 제반 문제 또는 현재의 보안기술 수준으로 방어가 곤란한 네트워크 해킹 등 "회사"의 귀책사유 없이 발생하는 문제에 대해서 책임을 지지 않습니다.
+7."회원"이 자신의 개인정보를 타인에게 유출 또는 제공함으로써 발생하는 피해에 대해서는 "회사"는 일체의 책임을 지지 않습니다.
+8."회사"는 "회원"이 "서비스"를 이용하여 기대하는 효용을 얻지 못한 것에 대하여 책임을 지지 않으며 "서비스"에 대한 취사 선택 또는 이용으로 발생하는 손해 등에 대해서는 책임이 면제됩니다.
+9.WiFi환경이 아닌 곳에서 접속하여 데이터 요금 발생 시, "회원"은 부과된 요금에 대해 "회사"에게 일체 지불 요청을 할 수 없습니다.
+10."회사"는 "서비스" 개편이나 운영상 또는 "회사"의 긴박한 상황 등에 의해 "서비스" 전부나 일부를 중단할 필요가 있는 경우 30일 전에 이를 공지하고 "서비스"의 제공을 중단할 수 있습니다. "회원"은 "서비스" 전부 혹은 일부의 종료 시 사용 기간이 남아 있지 않은 정액제 아이템 또는 횟수제 아이템에 대하여 배상을 청구할 수 없습니다.
+제 18 조 (준거법 및 재판관할)
+1."회사"와 "회원"간 발생한 분쟁에 대하여는 대한민국법을 준거법으로 합니다.
+2."회사"와 "회원"간 발생한 분쟁에 관한 소송은 민사소송법 상의 관할법원에 제소합니다.
+부칙
+이 약관은 2018년 12월 7일부터 적용됩니다.
+
+</mutableString>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ZRJ-AZ-TaJ" firstAttribute="leading" secondItem="wRF-yC-beF" secondAttribute="leading" constant="5" id="436-vy-lMb"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZRJ-AZ-TaJ" secondAttribute="trailing" constant="5" id="ACn-nE-0gs"/>
+                                    <constraint firstItem="ZRJ-AZ-TaJ" firstAttribute="top" secondItem="wRF-yC-beF" secondAttribute="top" constant="5" id="LO5-bw-43i"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZRJ-AZ-TaJ" secondAttribute="bottom" constant="5" id="Xy0-76-0O9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95686274510000002" green="0.96470588239999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="7b9-If-Hzz" firstAttribute="trailing" secondItem="wRF-yC-beF" secondAttribute="trailing" constant="21" id="2vn-wh-RcB"/>
+                            <constraint firstItem="7b9-If-Hzz" firstAttribute="trailing" secondItem="Xtr-vu-kyt" secondAttribute="trailing" id="RhC-Yh-VNY"/>
+                            <constraint firstItem="Xtr-vu-kyt" firstAttribute="top" secondItem="7b9-If-Hzz" secondAttribute="top" id="czR-oi-NZX"/>
+                            <constraint firstItem="Xtr-vu-kyt" firstAttribute="leading" secondItem="7b9-If-Hzz" secondAttribute="leading" id="dqu-Ho-AJe"/>
+                            <constraint firstItem="wRF-yC-beF" firstAttribute="leading" secondItem="7b9-If-Hzz" secondAttribute="leading" constant="21" id="lda-PL-FNl"/>
+                            <constraint firstItem="wRF-yC-beF" firstAttribute="top" secondItem="Xtr-vu-kyt" secondAttribute="bottom" constant="26" id="smC-q9-x61"/>
+                            <constraint firstItem="7b9-If-Hzz" firstAttribute="bottom" secondItem="wRF-yC-beF" secondAttribute="bottom" constant="26" id="tuf-dM-ZGU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7b9-If-Hzz"/>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s4K-bB-PQj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="20" y="1602"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Content_gradient" width="375" height="667"/>
@@ -732,5 +905,6 @@
         <image name="ranking_like" width="32" height="32"/>
         <image name="ranking_vs" width="62" height="62"/>
         <image name="ranking_yellow_bomb" width="40" height="40"/>
+        <image name="writepage_x" width="18" height="18"/>
     </resources>
 </document>
