--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageFeedTVCell.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageFeedTVCell.xib
@@ -108,7 +108,7 @@
                                         </constraints>
                                         <state key="normal" image="community_heart"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L81-cx-yC7">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L81-cx-yC7" customClass="myHeartBtn" customModule="Jungnami" customModuleProvider="target">
                                         <rect key="frame" x="96" y="581.5" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="KGy-OF-CbX"/>
@@ -182,6 +182,7 @@
                 <outlet property="likeCntLbl" destination="kHJ-Aj-9MD" id="5ho-3d-jTo"/>
                 <outlet property="userImgView" destination="SP7-zj-28x" id="n2r-tb-0vT"/>
                 <outlet property="userNameLbl" destination="CX3-Cc-PqW" id="plj-O4-k4b"/>
+                <outlet property="warningBtn" destination="L81-cx-yC7" id="o3F-rP-rRq"/>
             </connections>
             <point key="canvasLocation" x="56" y="60.5"/>
         </tableViewCell>
