--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedScrapTVCell.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedScrapTVCell.xib
@@ -136,7 +136,7 @@
                                         </constraints>
                                         <state key="normal" image="community_heart"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mal-JP-6za">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mal-JP-6za" customClass="myHeartBtn" customModule="Jungnami" customModuleProvider="target">
                                         <rect key="frame" x="96" y="217" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="YtB-et-H7y"/>
@@ -208,6 +208,7 @@
                 <outlet property="sharedTimeLbl" destination="piG-By-Gfh" id="Kji-Jh-iok"/>
                 <outlet property="userNameLbl" destination="JBz-7g-MBq" id="6Lr-mv-BNn"/>
                 <outlet property="userProfileImg" destination="hSH-F4-SD4" id="IQm-p6-MQy"/>
+                <outlet property="warningBtn" destination="mal-JP-6za" id="bSB-d4-8Pr"/>
                 <outlet property="whiteBackground" destination="BKh-Cx-MvL" id="ZGy-D1-Wez"/>
             </connections>
             <point key="canvasLocation" x="105.5" y="50.5"/>
