--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedTVcell.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedTVcell.xib
@@ -102,7 +102,7 @@
                                         </constraints>
                                         <state key="normal" image="community_heart"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mhf-lA-ByQ">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mhf-lA-ByQ" customClass="myHeartBtn" customModule="Jungnami" customModuleProvider="target">
                                         <rect key="frame" x="96" y="181.5" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="PA9-vQ-jdx"/>
@@ -172,6 +172,7 @@
                 <outlet property="likeCntLbl" destination="WnD-iw-U9G" id="vnl-KV-CR4"/>
                 <outlet property="userImgView" destination="d5i-4g-Bwf" id="bmk-wH-cgs"/>
                 <outlet property="userNameLbl" destination="vtd-sS-Xjw" id="dZ6-AL-OXd"/>
+                <outlet property="warningBtn" destination="Mhf-lA-ByQ" id="3I4-Zs-y6q"/>
             </connections>
             <point key="canvasLocation" x="77" y="-123.5"/>
         </tableViewCell>
