--- a/Jungnami/Jungnami/SJ/Storyboard/Content.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Content.storyboard
@@ -103,12 +103,9 @@
                                                     <action selector="commentBtn:" destination="HxA-wi-rS3" eventType="touchUpInside" id="MUP-oi-CeA"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XEh-bf-nIK">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XEh-bf-nIK" customClass="ReportButton" customModule="Jungnami" customModuleProvider="target">
                                                 <rect key="frame" x="77" y="0.0" width="23" height="24"/>
                                                 <state key="normal" image="content_warning"/>
-                                                <connections>
-                                                    <action selector="reportContentAction:" destination="HxA-wi-rS3" eventType="touchUpInside" id="H9W-w8-Yky"/>
-                                                </connections>
                                             </button>
                                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WHz-fn-AUk">
                                                 <rect key="frame" x="100" y="0.0" width="0.0" height="24"/>
@@ -245,6 +242,7 @@
                         <outlet property="likeBtn" destination="MF9-mu-fzT" id="3ab-ZJ-Uf6"/>
                         <outlet property="likeCountLbl" destination="Ptn-Hw-dcV" id="RP9-Ni-H1Q"/>
                         <outlet property="pageLbl" destination="GMc-Av-Fof" id="Tax-DH-4ZI"/>
+                        <outlet property="reportBtn" destination="XEh-bf-nIK" id="NJS-pk-mnr"/>
                         <outlet property="scarpBtn" destination="J3Q-QK-3gV" id="IkO-rM-BBf"/>
                         <outlet property="shareBtn" destination="WHz-fn-AUk" id="bzO-hP-Tod"/>
                     </connections>
