--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageFeedTVCell.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageFeedTVCell.xib
@@ -108,7 +108,7 @@
                                         </constraints>
                                         <state key="normal" image="community_heart"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L81-cx-yC7" customClass="myHeartBtn" customModule="Jungnami" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L81-cx-yC7" customClass="ReportButton" customModule="Jungnami" customModuleProvider="target">
                                         <rect key="frame" x="96" y="581.5" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="KGy-OF-CbX"/>
