--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedScrapTVCell.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedScrapTVCell.xib
@@ -136,7 +136,7 @@
                                         </constraints>
                                         <state key="normal" image="community_heart"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mal-JP-6za" customClass="myHeartBtn" customModule="Jungnami" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mal-JP-6za" customClass="ReportButton" customModule="Jungnami" customModuleProvider="target">
                                         <rect key="frame" x="96" y="217" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="YtB-et-H7y"/>
