--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedTVcell.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/MyPageFeed/MypageNoImageFeedTVcell.xib
@@ -102,7 +102,7 @@
                                         </constraints>
                                         <state key="normal" image="community_heart"/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mhf-lA-ByQ" customClass="myHeartBtn" customModule="Jungnami" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mhf-lA-ByQ" customClass="ReportButton" customModule="Jungnami" customModuleProvider="target">
                                         <rect key="frame" x="96" y="181.5" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="PA9-vQ-jdx"/>
